--- a/style.css
+++ b/style.css
@@ -3,3 +3,16 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+.experience{
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+
+}
+
+.experience-canvas{
+  width:100%;
+  height: 100%;
+
+}
